[package]
name = "include_dir_as_map"
version = "1.0.0"
edition = "2021"
authors = [ "fboulnois <fboulnois@users.noreply.github.com>" ]
description = "Embed files from a directory as a hashmap in the rust binary"
keywords = [ "include", "embed", "actix", "web", "static" ]
categories = [ "web-programming", "filesystem" ]
readme = "README.md"
repository = "https://github.com/fboulnois/include_dir_as_map"
license = "MIT"

[dependencies]
proc_include_dir_as_map = { version = "1", path = "proc" }

[features]
always-embed = [ "proc_include_dir_as_map/always-embed" ]

[workspace]
members = [
  "proc",
  "examples/*"
]
