[package]
name = "proc_include_dir_as_map"
version = "1.0.0"
edition = "2021"
authors = [ "fboulnois <fboulnois@users.noreply.github.com>" ]
description = "Magic which implements the procedural macro `include_dir_as_map`"
repository = "https://github.com/fboulnois/include_dir_as_map"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1"

[features]
always-embed = []
